--- a/assets/sass/components/_popup-cart.scss
+++ b/assets/sass/components/_popup-cart.scss
@@ -8,6 +8,12 @@
   position: relative;
   display: flex;
   align-items: center;
+
+  @media (max-width: 767px) {
+    margin-right: 12px;
+    text-transform: uppercase;
+    font-size: 12px;
+  }
 }
 
 .cart-icon {
